# yyx-bridge

./: .gitignore  Cargo.toml  README.md  bridge.dll.vmp  build-all.cmd  build-guild-debug.cmd  build-guild-mac.sh  build-guild.cmd  build-mumu.cmd  build.cmd
.cargo/: config
bridge/: Cargo.toml  build.rs
bridge-derive/: Cargo.toml
bridge-derive/src/: lib.rs
bridge-loader/: Cargo.toml  build.rs  manifest.xml
bridge-loader-windows/: Cargo.toml  build.rs
bridge-loader-windows/src/: main.rs
bridge-loader/src/: bin.rs  bin_macos.rs  bin_windows.rs  lib.rs  lib_macos.rs  main.rs
bridge-tests/: Cargo.toml
bridge-tests/src/: lib.rs  test.txt
bridge-types/: Cargo.toml
bridge-types/src/: guild.rs  hero.rs  hero_book_fragment.rs  hero_book_shard.rs  hero_equip.rs  hero_equip_preset.rs  lib.rs  player.rs  realm_card.rs  story_task.rs
bridge-value/: Cargo.toml
bridge-value/src/: lib.rs
bridge/assets/: client.py  client_guild.py  client_windows.py  extract.py  gw.py  lens.py  skill_levels.py  supported_version.txt  test.py
bridge/src/: api.rs  deserialize.rs  inject.cpp  inject.rs  lib.rs  process.rs  ptr.rs  pull.rs  result.rs
bridge/src/emulator/: mod.rs  result.rs
bridge/src/pull/: mod.rs
bridge/src/windows/: api.rs  byte_pattern.cpp  byte_pattern.rs  inject.cpp  inject.rs  mod.rs  process.cpp  process.rs  result.rs  utils.rs  window.cpp  window.rs
bridge/src/windows/api/: api.rs  api_dll.rs  api_steam.rs  mod.rs
bridge/src/windows/pull/: mod.rs
