[package]
name = "bridge-loader-windows"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = []
# default = ["guild", "noadmin"]
noadmin = []
guild = []
dmm = []
mumu = []

[dependencies]
libloading = "0.5.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
bridge-types = { path = "../bridge-types" }

[build-dependencies]
winres = "0.1.8"