[package]
name = "bridge-loader"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = ["guild"]
guild = []

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "bridge-loader"
path = "src/bin.rs"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
bridge = { path = "../bridge" }

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
csv = "1"
bridge-types = { path = "../bridge-types" }
