[package]
name = "bridge"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.6", features = ["libloaderapi", "winver"] }
failure = "0.1.3"
failure_derive = "0.1.3"
bridge-derive = { path = "../bridge-derive" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"

[build-dependencies]
cc = "1.0"