[package]
name = "bridge"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.6", features = [
  "libloaderapi", 
  "winver", 
  "processthreadsapi",
  "errhandlingapi", 
  "winbase", 
  "synchapi", 
  "winnt", 
  "namedpipeapi", 
  "winerror", 
  "handleapi",
  "fileapi",
  "winver",
  "ioapiset"
] }
failure = "0.1.3"
failure_derive = "0.1.3"
bridge-value = { path = "../bridge-value" }
bridge-types = { path = "../bridge-types" }
bridge-derive = { path = "../bridge-derive" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
lazy_static = "1.0"
crossbeam-channel = "0.3"
simplelog = "0.5"

[build-dependencies]
cc = "1.0"