[package]
name = "bridge"
version = "0.9.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# default = ["guild", "fg"]
steam = []
fg = []
dmm = ["steam"]
guild = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
  "libloaderapi", 
  "winver", 
  "processthreadsapi",
  "errhandlingapi", 
  "winbase", 
  "synchapi", 
  "winnt", 
  "namedpipeapi", 
  "winerror", 
  "handleapi",
  "fileapi",
  "winver",
  "ioapiset",
  "sddl"
] }

[target.'cfg(target_os = "macos")'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
bridge-value = { path = "../bridge-value" }
bridge-types = { path = "../bridge-types" }
bridge-derive = { path = "../bridge-derive" }
adb-rs = { git = "https://github.com/fluxxu/adb-rs.git" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
lazy_static = "1.0"
crossbeam-channel = "0.3"
simplelog = "0.5"

[build-dependencies]
cc = "1.0"